jlink configuration fixed