@@ -59,20 +59,19 @@ application {
 jlink {
     imageName.set(project.name + "-" + project.version)
     moduleName.set(application.mainModule)
-    options = ["--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages", "--add-modules",
-               "is.codion.framework.db.local,is.codion.dbms.h2database,is.codion.plugin.hikari.pool," +
+    options = ["--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages", "--ignore-signing-information",
+               "--add-modules", "is.codion.framework.db.local,is.codion.dbms.h2database,is.codion.plugin.hikari.pool," +
                        "is.codion.plugin.logback.proxy,is.codion.framework.demos.world.domain,is.codion.framework.servlet"]
 
     mergedModule {
-        uses "org.slf4j.spi.SLF4JServiceProvider"
         excludeRequires "com.fasterxml.jackson.annotation"
+        excludeRequires "jetty.servlet.api"
     }
 
-    jarExclude("javalin", "/org/eclipse/jetty/http/encoding.properties")
+    forceMerge 'kotlin'
 
     launcher {
         jvmArgs = applicationDefaultJvmArgs
-        jvmArgs += ["--add-reads", "world.merged.module=kotlin.stdlib"]
     }
 
     jpackage {
